Added API for "POI State", "User State", "User Type", "Recurrence Type"
